# ml_hits

./: .gitignore  Dockerfile  README.md  docker-compose.yml  flask_app.py  model.py  pyproject.toml
notebooks/: notebook.ipynb
