[tool.poetry]
name = "model"
version = "0.1.0"
description = "ml"
authors = ["Miron <pontak.miron@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
catboost = "^1.2.3"
optuna = "^3.5.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
